--- a/DiepVanDinh/inventory.html
+++ b/DiepVanDinh/inventory.html
@@ -11,35 +11,44 @@
 </head>
 
 <body onload="renderListProduct()">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">   
-            <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
-                        <ul class="dropdown-menu" aria-labelledby="customerDropdown">
-                            <li><a class="dropdown-item" href="customer.html">Trong nước</a></li>
-                            <li><a class="dropdown-item" href="customer.html">Nước ngoài</a></li>
-                            <li><a class="dropdown-item" href="customer.html">Nội bộ</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Kho hàng</a>
-                        <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
-                            <li><a class="dropdown-item" href="inventory.html">Nhập kho</a></li>
-                            <li><a class="dropdown-item" href="inventory.html">Xuất kho</a></li>
-                            <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
-                </ul>
-                <div class="d-flex ms-auto">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">   
+                <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="warehousemain.html">Tổng quan</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Khách hàng</a>
+                            <ul class="dropdown-menu" aria-labelledby="customerDropdown">
+                                <li><a class="dropdown-item" href="customer.html">Trong nước</a></li>
+                                <li><a class="dropdown-item" href="customer.html">Nước ngoài</a></li>
+                                <li><a class="dropdown-item" href="customer.html">Nội bộ</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Kho hàng</a>
+                            <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
+                                <li><a class="dropdown-item" href="inventory.html">Nhập kho</a></li>
+                                <li><a class="dropdown-item" href="inventory.html">Xuất kho</a></li>
+                                <li><a class="dropdown-item" href="inventory.html">Tồn kho</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                                <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
+                                <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                                <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                                <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                                </ul>
+                            </li>
+                    </ul>
+                    <div class="d-flex ms-auto">
+                       
                     <!-- Register / Login Buttons -->
                     <a href="register.html" class="btn btn-outline-primary me-2">Đăng ký</a>
                     <a href="login.html" class="btn btn-outline-secondary">Đăng nhập</a>
@@ -47,7 +56,7 @@
             </div>
         </div>
     </nav>
-
+    </header>
     <div class="container mt-5">
         <h1>Quản lý kho</h1>
 
@@ -125,7 +134,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="importSupplier" class="form-label">Khách hàng:</label>
-                        <input type="text" id="exportSupplier" name="supplier" class="form-control" required>
+                        <input type="text" id="exportSupplier" name="supplier" class="form-control" placeholder="Nhập nhà cung cấp" required>
                     </div>
                     <div class="mb-3">
                         <label for="exportDate" class="form-label">Ngày xuất:</label>
