--- a/DiepVanDinh/nhansu.html
+++ b/DiepVanDinh/nhansu.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warehouse Management Dashboard</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="testbootstrap.css">
-
+    <link rel="stylesheet" href="nhansu.css">
 </head>
 <body>
     <!-- Khong dung lo go nua -->
@@ -45,7 +44,14 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="nhansu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                            <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
+                            <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                            <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                            <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                            </ul>
+                        </li>
                 </ul>
                 <div class="d-flex ms-auto">
                     <!-- Register / Login Buttons -->
@@ -55,66 +61,36 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <h1>Chấm Công</h1>
+        <form id="attendance-form">
+            <label for="employee-name">Tên Nhân Viên:</label>
+            <select id="employee-name">
+                <option value="Ngô Xuân Lộc">Ngô Xuân Lộc</option>
+                <option value="Hồ Nguyên Long">Hồ Nguyên Long</option>
+                <option value="Đinh Văn Điệp">Đinh Văn Điệp</option>
+                <option value="Hoàng Bá Ngọc">Hoàng Bá Ngọc</option>
+                <option value="Nguyễn Phúc Hiếu">Nguyễn Phúc Hiếu</option>
+            </select>
 
-    <!-- Search Section -->
-    <div class="container mt-3">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <button class="btn btn-outline-secondary" type="button">Tìm kiếm</button>
-                </div>
-            </div>
-        </div>
+            <button type="button" onclick="checkIn()">Chấm Công</button>
+        </form>
+
+        <h2>Lịch Sử Chấm Công</h2>
+        <table id="attendance-table">
+            <thead>
+                <tr>
+                    <th>Tên Nhân Viên</th>
+                    <th>Thời Gian Chấm Công</th>
+                </tr>
+            </thead>
+            <tbody id="attendance-body">
+                <!-- Dữ liệu chấm công sẽ được hiển thị ở đây -->
+            </tbody>
+        </table>
     </div>
-
-    <!-- Background Image -->
-    <!-- Slideshow (Carousel) -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="anh1.jpg" class="d-block w-100" alt="Image 1">
-            </div>
-            <div class="carousel-item">
-                <img src="anh2.jpg" class="d-block w-100" alt="Image 2">
-            </div>
-            <div class="carousel-item">
-                <img src="anh3.jpg" class="d-block w-100" alt="Image 3">
-            </div>
-            <div class="carousel-item">
-                <img src="anh4.jpg" class="d-block w-100" alt="Image 4">
-            </div>
-            <div class="carousel-item">
-                <img src="anh5.jpg" class="d-block w-100" alt="Image 5">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-
-    <!-- Footer -->
-    <footer class="bg-light text-center py-3 mt-4">
-        <p class="ngocngu">&copy; Information Technology - IT4 - University of Information and Communication</p>
-    </footer>
-
-    <!-- Bootstrap JS -->
+    <script src="nhansu.js"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
