--- a/DiepVanDinh/report.html
+++ b/DiepVanDinh/report.html
@@ -7,9 +7,11 @@
     <title>Báo cáo</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
+
+
 <body>
-    <meta charset="utf-8">
-</head><nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">   
         <a class="navbar-brand" href="./warehousemain.html">Warehouse</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +37,14 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Nhân sự</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                        <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
+                        <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                        <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                        <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                        </ul>
+                    </li>
             </ul>
             <div class="d-flex ms-auto">
                 <!-- Register / Login Buttons -->
@@ -44,7 +53,7 @@
         </div>
     </div>
 </nav>
-</head>
+    </header>
 
     <div class="container mt-5">
         <h1>Quản lý kho</h1>
@@ -71,11 +80,12 @@
 
     </div>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="report.js"></script> </body>
+    <script src="report.js"></script> 
 
 
     <!-- Footer -->
         <footer class="bg-light text-center py-3 mt-4">
             <p>&copy; Information Technology - IT4 - University of Information and Communication</p>
         </footer>
+    </body>
 </html>
