--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -75,6 +75,44 @@
             </div>
         </div>
     </div>
+    <!--slide show-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      </div>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+              <img src="imagewarehouse/anh1.jpg" class="d-block w-100" alt="Image 1">
+          </div>
+          <div class="carousel-item">
+              <img src="imagewarehouse/anh2.jpg" class="d-block w-100" alt="Image 2">
+          </div>
+          <div class="carousel-item">
+              <img src="imagewarehouse/anh3.jpg" class="d-block w-100" alt="Image 3">
+          </div>
+          <div class="carousel-item">
+              <img src="imagewarehouse/anh4.jpg" class="d-block w-100" alt="Image 4">
+          </div>
+          <div class="carousel-item">
+              <img src="imagewarehouse/anh5.jpg" class="d-block w-100" alt="Image 5">
+          </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+      </button>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Dark mode -->
     <label class="switch">
       <input type="checkbox" id="darkModeToggle">
