--- a/DiepVanDinh/report.html
+++ b/DiepVanDinh/report.html
@@ -39,7 +39,14 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
-                <li class="nav-item"><a class="nav-link" href="nhansu.html">Nhân sự</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="nhansu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                        <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
+                        <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                        <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
+                        <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
+                        </ul>
+                    </li>
             </ul>
             <div class="d-flex ms-auto">
                 <!-- Register / Login Buttons -->
