--- a/DiepVanDinh/warehousemain.html
+++ b/DiepVanDinh/warehousemain.html
@@ -48,14 +48,14 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="report.html">Báo cáo</a></li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
-                          <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
-                          <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
-                          <li><a class="dropdown-item" href="phanquyen.html">Phân quyền</a></li>
-                          <li><a class="dropdown-item" href="nhansu.html">Tính lương</a></li>
-                          </ul>
-                      </li>
-                </ul>   
+                        <a class="nav-link dropdown-toggle" href="#" id="nhansuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nhân sự</a>
+                            <ul class="dropdown-menu" aria-labelledby="nhansuDropdown">
+                            <li><a class="dropdown-item" href="dsnv.html">Danh sách nhân viên</a></li>
+                            <li><a class="dropdown-item" href="dsnv.html">Phân quyền</a></li>
+                            <li><a class="dropdown-item" href="dsnv.html">Tính lương</a></li>
+                            </ul>
+                        </li>
+                </ul>
                   <!-- Dark mode -->
                  <label class="switch">
                     <input type="checkbox" id="darkModeToggle">
